# LeverageCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SP500.csv  USD.csv  main.cpp
include/: levcalc.hpp  parser.hpp
src/: CMakeLists.txt  levcalc.cpp  main.cpp  parser.cpp
